# backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Authentication;
+use App\Http\Controllers\Chatting;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -14,11 +15,7 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
+//Auth
 Route::post('/signup', [Authentication::class, "signup"]);
 Route::post('/login', [Authentication::class, "login"]);
 
@@ -27,7 +24,14 @@ Route::get('/forget_password/{user}', [Authentication::class, "ForgetPasswordHan
 
 //protect route
 Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/user',[Authentication::class, "user"]);
     Route::post('/change_password', [Authentication::class, "changePassword"]);
     Route::post('/verify_email_request', [Authentication::class, "RequestEmailVerification"]);
     Route::post('/verify_email_handler', [Authentication::class, "EmailVerificationHandler"]);
+});
+
+//Chatting
+Route::middleware('auth:sanctum')->group(function (){
+    Route::post('/send_text_message',[Chatting::class,"SendMessage"]);
+
 });
